[package]
name = "hank"
version = "0.1.0"
authors = ["Marc Addeo <marcaddeo@gmail.com>"]

[lib]
name = "hank"
path = "src/lib.rs"

[[bin]]
name = "hank"
path = "src/main.rs"

[dependencies]
irc = "0.12"
regex = "0.2"
rand = "0.3"
time = "0.1"
curl = "0.4.8"
serde_json = "1.0.4"
error-chain = "0.11.0"
